--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,10 +1,16 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Popup</title>
+    <title>Overwritten Methods</title>
   </head>
+  <style>
+    body {
+      min-width: 19rem;
+      margin: 16px;
+    }
+  </style>
   <body>
-    <h2>Overwritten functions</h2>
+    <h2>Overwritten Methods In This Page</h2>
     <ul id="list"></ul>
   </body>
   <script src="popup.js"></script>
